--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&display=swap');
+
+:root {
+  --search-bg: 0, 0%, 100%, .16;
+}
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Inter', sans-serif;
+  background-color: #151515;
+  color: #fff;
 }
 
 a {
@@ -14,3 +20,12 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.search-bg {
+  background-color: hsla(var(--search-bg))
+}
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
